2006-07-18  Egmont Koblinger  <egmont@uhulinux.hu>

	* extfs/deb.in (mcdebfs_list): Do not skip over directory entries.
	Set the locale to C when executing dpkg-deb.

2006-07-13  Marcel Pol  <mpol@gmx.net>

	* extfs/rpm: Remove support for obsoleted RPM tags.
	* extfs/trpm: Likewise.

2006-05-28  Leonard den Ottolander <leonard den ottolander nl>

	* extfs/mailfs.in (parse_date): Output 3 date fields not 4. Range to
	output time not year is slightly larger than the range used by
	file_date() in util.c. Prefer using Date::Parse over Date::Manip as the
	former is faster. Fix fallback for "light version".
	(process_header): Match header field names case insensitively.
	(mailfs_list): Improve match for header start.
	(mailfs_copyout): Likewise.

2006-05-05  Andrew V. Samoilov  <andrew@email.zp.ua>

	* extfs/uzip.in (print_file): Use %8s instead of %8d 
	printf() pattern to print really big "realsize"

2006-04-18  Pavel Tsekov  <ptsekov@gmx.net>

	* tar.c: Minor cleanup.

2006-04-17  Pavel Tsekov  <ptsekov@gmx.net>

	* tar.c (PREFIX_SIZE): New macro definition.
	(union unused): New union which describes better the trailing bytes
	of the tar record header.
	(union record): Do not assume that all tar archives follow the GNU
	tar archive format.
	(tar_open_archive_int): Initialize the variable holding the type fo the
	archive format.
	(tar_read_header): Try to determine the archive format using the
	`magic' field of the tar record header. Use the `linkflag' field
	as a fallback.
	Add support for pathnames of upto 256 characters as stored in ustar
	archives.
	Do not access GNU specific fields of the tar record header if the
	archive is not a GNU one.
	(tar_fill_stat): Pass pointer to vfs_s_super instead of pointer ot
	vfs_class as the first argument.
	Do not access GNU specific fields of the tar record header if the
	archive is not a GNU one.

2006-04-14  Pavel Tsekov  <ptsekov@gmx.net>

	* tar.c (OLDGNU_MAGIC): New macro definition.